--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="col-lg">
           <h3>You <span>work</span> like at <span>home</span></h3>
           <p>Bekerja dengan suasana hati yang lebih asyik dan mempelajari hal baru setiap harinya</p>
-          <a href="" class="btn btn-success tombol">Gallery</a>
+          <a href="" class="btn btn-primary tombol">Gallery</a>
         </div>
       </div>
       <!-- akhir working space -->
