menghapus img titik

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
         <div class="col-10 info-panel">
           <div class="row">
             <div class="col-lg">
-              <img src="../img/employee.png" class="float-left" alt="employee">
+              <img src="img/employee.png" class="float-left" alt="employee">
               <h4>24 Hours</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="col-lg">
-              <img src="../img/hires.png " class="float-left" alt="security">
+              <img src="img/hires.png " class="float-left" alt="security">
               <h4>24 Hours</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="col-lg">
-              <img src="../img/security.png" class="float-left" alt="security">
+              <img src="img/security.png" class="float-left" alt="security">
               <h4>24 Hours</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
