--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <section class="testimonial">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h5>"Bekerja dengan suasana hati yang lebih asyik, menyenangkan dan mempelajari hal baru setiap harinya"</h5>
+            <h5>"Bekerja dengan suasana hati yang lebih asyik dan mempelajari hal baru setiap harinya"</h5>
           </div>
         </div>
 
